<resources>
    <string name="app_name">Iota</string>
    <string name="creating_account">Creating account…</string>
    <string name="registration_fail">Error! Please make sure you are a new user</string>
    <string name="registration_success">Welcome to I o t a</string>
    <string name="password_misMatch">Your passwords dont match</string>
    <string name="tooLongInput">Your inputs are too long, please limit to 60 characters each</string>
    <string name="incomplete_form">Please complete your form</string>
    <string name="logging_in">Logging In…</string>
    <string name="playlist_searchView_description">Note: This should take the user to the search activity.</string>
    <string name="playlist_plyalistView_description">Note: THis should take the user to the playlist activity.</string>
    <string name="playlist_songView_description">Note: This should take the user to the song activity.</string>
    <string name="playlist_userView_description">Note: This should take the user to the user activity.</string>
    <string name="note_a_little_user_image">Note: A little user image.</string>
    <string name="back">Back</string>
    <string name="playlist_name">PlayList Name</string>
    <string name="all_audio">All Audio</string>
    <string name="add_songs">Add Songs</string>
    <string name="i_o_t_a">I o t a</string>
    <string name="reset">Reset</string>
    <string name="log_in">Log In</string>
    <string name="email">Email</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="we_will_send_you_are_reset_password_to_your_email">We will send you are reset password to your email.</string>
    <string name="log_in_text">Log In</string>
    <string name="forgot_password_text">Forgot Password</string>
    <string name="register">Register</string>
    <string name="email_text">Email</string>
    <string name="password_text">Password</string>
    <string name="log_in_text1">Log In</string>
    <string name="search_upload_play_audio_non_stop">Search. Upload. Play. Audio. Non-Stop!</string>
    <string name="name">Name:</string>
    <string name="create">Create</string>
    <string name="select_audio">Select Audio</string>
    <string name="online_playlists">Online Playlists</string>
    <string name="to_upload_a_new_online_playlist_simply_make_one_locally_and_upload_it_it">To upload a new online playlist simply make one locally and upload it it.</string>
    <string name="all_local_playlists">All Local Playlists</string>
    <string name="plus">+</string>
    <string name="playlist_name_text">PlayList Name</string>
    <string name="delete_playlist">Delete Playlist</string>
    <string name="remove_songs">Remove Songs</string>
    <string name="play">PLAY</string>
    <string name="upload">Upload</string>
    <string name="i_o_t_a1">I o t a</string>
    <string name="register1">Register</string>
    <string name="log_in1">Log In</string>
    <string name="email1">Email</string>
    <string name="password1">Password</string>
    <string name="register2">Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="go">GO</string>
    <string name="select_to_play_a_playlist">Select to play a playlist!</string>
    <string name="all_local_audio">All Local Audio</string>
    <string name="local_audio">Local Audio</string>
    <string name="reset_password">Reset Password</string>
    <string name="log_out">Log Out</string>
    <string name="online_playlists1">Online Playlists</string>

</resources>
