<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="mjhub_media.iota.user">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:paddingLeft="-1dp">

        <ImageButton
            android:layout_width="90dp"
            android:layout_height="match_parent"
            android:id="@+id/searchView"
            android:background="#ffffff"
            android:contentDescription="@string/playlist_searchView_description"
            />
        <ImageButton
            android:layout_width="90dp"
            android:layout_height="match_parent"
            android:background="#ffffff"
            android:id="@+id/playlistView"
            android:contentDescription="@string/playlist_plyalistView_description"
            />
        <ImageButton
            android:layout_width="90dp"
            android:layout_height="match_parent"
            android:background="#ffffff"
            android:id="@+id/songView"
            android:contentDescription="@string/playlist_songView_description"
            />
        <ImageButton
            android:layout_width="90dp"
            android:layout_height="match_parent"
            android:id="@+id/userView"
            android:background="#ffffff"
            android:contentDescription="@string/playlist_userView_description"
            />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Medium Text"
        android:id="@+id/currFrag"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />



    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:id="@+id/imageView"
        android:layout_below="@+id/currFrag"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="23dp"
        android:layout_marginLeft="10dp"
        android:contentDescription="@string/note_a_little_user_image"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Local Playlist"
        android:id="@+id/button"
        android:onClick="move2playlist_List"
        android:layout_below="@+id/imageView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="37dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:background="#040404"
        android:textColor="#ffffff" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/local_audio"
        android:id="@+id/button2"
        android:layout_below="@+id/button"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textColor="#ffffff"
        android:background="#000000"
        android:onClick="move2audioList" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset_password"
        android:onClick="resetPassword"
        android:id="@+id/button3"
        android:background="#000000"
        android:textColor="#ffffff"
        android:layout_below="@+id/button2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="51dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log_out"
        android:onClick="logOut"
        android:id="@+id/button4"
        android:textColor="#ffffff"
        android:background="#e62b2b"
        android:layout_below="@+id/button3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/online_playlists1"
        android:onClick="move2onlinePlaylists"
        android:id="@+id/button14"
        android:layout_below="@+id/button2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
