<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="mjhub_media.iota.playlist_settings">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:text="@string/back"
        android:onClick="move2playlist_list"
        android:id="@+id/button7"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="#ffffff"
        android:background="#000000"
        android:layout_toLeftOf="@+id/button10"
        android:layout_toStartOf="@+id/button10" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/playlist_name_text"
        android:id="@+id/textView10"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:padding="10dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:text="@string/delete_playlist"
        android:onClick="deletePlayList"
        android:id="@+id/button8"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:background="#fd1313"
        android:textColor="#ffffff"
        android:layout_alignTop="@+id/button7"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/button10"
        android:layout_toEndOf="@+id/button10" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/plus"
        android:onClick="addSongs2playList"
        android:id="@+id/button9"
        android:layout_alignTop="@+id/textView10"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textColor="#ffffff"
        android:background="#000000"
        android:textSize="20sp" />

    <Button
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:text="@string/remove_songs"
        android:onClick="removeSelectedAudio"
        android:id="@+id/button10"
        android:layout_below="@+id/playlist_main_menu_listView"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/play"
        android:onClick="playPlayList"
        android:id="@+id/button11"
        android:layout_below="@+id/button9"
        android:layout_alignLeft="@+id/button9"
        android:layout_alignStart="@+id/button9"
        android:textColor="#ffffff"
        android:background="#1434e8"
        android:textStyle="bold" />

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/playlist_main_menu_listView"
        android:layout_alignLeft="@+id/textView10"
        android:layout_alignStart="@+id/textView10"
        android:layout_above="@+id/button7"
        android:layout_below="@+id/button11" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/upload"
        android:onClick="uploadPlayList"
        android:id="@+id/upload"
        android:layout_below="@+id/button9"
        android:layout_toLeftOf="@+id/button11"
        android:layout_toStartOf="@+id/button11"
        android:background="#11fb0d"
        android:textColor="#ffffff" />
</RelativeLayout>
