<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="mjhub_media.iota.Forgot_password">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/i_o_t_a"
        android:id="@+id/textView"
        android:layout_marginTop="27dp"
        android:textSize="50sp"
        android:textStyle="bold"
        android:fontFamily="@string/abc_font_family_display_2_material"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />



    <Button
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:text="@string/reset"
        android:id="@+id/reset_Button"
        android:layout_below="@+id/reset_Email"
        android:onClick="resetPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/reset_Email"
        android:layout_marginTop="21dp"
        android:layout_below="@+id/textView4"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/log_in"
        android:id="@+id/textView3"
        android:onClick="move2logIn"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/email"
        android:id="@+id/textView4"
        android:layout_marginTop="69dp"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/forgot_password"
        android:id="@+id/textView6"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/we_will_send_you_are_reset_password_to_your_email"
        android:id="@+id/textView8"
        android:layout_marginTop="37dp"
        android:layout_below="@+id/reset_Button"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />


</RelativeLayout>
