<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="mjhub_media.iota.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="I o t a"
        android:id="@+id/textView"
        android:textSize="50sp"
        android:textStyle="bold"
        android:fontFamily="@string/abc_font_family_display_2_material"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />



    <Button
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:text="@string/log_in_text"
        android:id="@+id/logIn_button"
        android:onClick="logInNow"
        android:layout_below="@+id/logIn_password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="23dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/logIn_email"
        android:layout_below="@+id/textView4"
        android:layout_alignLeft="@+id/logIn_password"
        android:layout_alignStart="@+id/logIn_password" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/logIn_password"
        android:layout_marginTop="21dp"
        android:layout_below="@+id/textView5"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/forgot_password_text"
        android:id="@+id/forgotPassword"
        android:onClick="move2forgotPassword"
        android:layout_below="@+id/logIn_button"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/register"
        android:id="@+id/register"
        android:onClick="move2register"
        android:layout_below="@+id/forgotPassword"
        android:layout_alignLeft="@+id/textView6"
        android:layout_alignStart="@+id/textView6" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/email_text"
        android:id="@+id/textView4"
        android:layout_marginTop="69dp"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/password_text"
        android:id="@+id/textView5"
        android:layout_marginTop="25dp"
        android:layout_below="@+id/logIn_email"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/log_in_text1"
        android:id="@+id/textView6"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/search_upload_play_audio_non_stop"
        android:id="@+id/textView18"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />


</RelativeLayout>
