<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="mjhub_media.iota.playlist">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:paddingLeft="-1dp"
        android:id="@+id/linearLayout">

        <ImageButton
            android:layout_width="90dp"
            android:layout_height="match_parent"
            android:id="@+id/searchView"
            android:background="#ffffff"
            android:contentDescription="@string/playlist_searchView_description"/>
        <ImageButton
            android:layout_width="90dp"
            android:layout_height="match_parent"
            android:background="#ffffff"
            android:id="@+id/playlistView"
            android:contentDescription="@string/playlist_plyalistView_description"/>
        <ImageButton
            android:layout_width="90dp"
            android:layout_height="match_parent"
            android:background="#ffffff"
            android:id="@+id/songView"
            android:contentDescription="@string/playlist_songView_description"/>
        <ImageButton
            android:layout_width="90dp"
            android:layout_height="match_parent"
            android:id="@+id/userView"
            android:background="#ffffff"
            android:contentDescription="@string/playlist_userView_description"
            />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Medium Text"
        android:id="@+id/currFrag"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/listView2"
        android:layout_below="@+id/currFrag"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/linearLayout" />

</RelativeLayout>
